# tosk

./: .env  Cargo.toml  LICENSE  README.md  sonar-project.properties
.github/workflows/: build.yml  rust.yml
src/: config.rs  env.rs  help_msg.rs  lib.rs  main.rs
