[package]
name = "tosk"
description = "A very lightweight, easy-to-use CLI task / todo list app written in Rust"
authors = ["sharkmu"]
repository = "https://github.com/sharkmu/tosk"
license = "MIT"
readme = "README.md"
version = "1.0.3"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dirs = "6.0.0"
helptext = "0.1.1"
once_cell = "1.21.3"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.6"
